--- a/Website/style.css
+++ b/Website/style.css
@@ -5,6 +5,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+    scroll-behavior:smooth;
 }
 body
 {
@@ -26,9 +27,8 @@ header
 }
 header .logo
 {
-    color: #fff;
-    font-weight: 700;
-    text-decoration: none;
+    font-family: Copperplate, Papyrus, fantasy;
+    color: #343038;
     font-size: 2em;
     text-transform: uppercase;
     letter-spacing: 2px;
@@ -45,13 +45,14 @@ header #nav li{
 }
 header #nav li button
 {
+    font-family: Copperplate, Papyrus, fantasy;
     text-decoration: none;
     padding: 6px 15px;
     font-size: 16px;
     font-weight: 700;
 
     cursor: pointer;
-    color: white;
+    color: #343038;
 
     background-color: transparent;
     
@@ -62,6 +63,7 @@ header #nav li button:hover ,
 header #nav li button.active
 {
     background: #fff;
+    color: #343038;
 }
 section
 {
@@ -73,7 +75,9 @@ section
 #sec
 {
     z-index: 1000;
-    background-color: rgb(0, 255, 255);
+    background-color: #1c0522;
+    color: rgb(255,255,255);
+    padding:100px; 
 }
 section::before
 {
@@ -98,10 +102,18 @@ section img
 }
 #sun
 {
+    left: 25%;
+    width: 50%;
+    height: 50%;
     mix-blend-mode: screen;
     z-index: -1;
 }
 #stars
 {
-    z-index: -1;
+    z-index: -2;
+}
+#bGround
+{
+    z-index: -3;
+    filter:brightness(75%);
 }
